[gd_scene load_steps=9 format=2]

[ext_resource path="res://Nodes/Ui/HighlightLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Ui/Indicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shaders/MenuFlavors.tres" type="Material" id=3]
[ext_resource path="res://Graphics/UI/Inventory/characters/key.png" type="Texture" id=4]
[ext_resource path="res://Nodes/Ui/Inventory/InventorySelect.gd" type="Script" id=5]
[ext_resource path="res://Graphics/UI/Inventory/character-bar.png" type="Texture" id=8]
[ext_resource path="res://Nodes/Ui/Inventory/portrait.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.729412, 0.32549, 0.894118, 1 )

[node name="InventorySelect" type="TextureRect"]
material = ExtResource( 3 )
margin_left = 31.0
margin_right = 286.0
margin_bottom = 27.0
texture = ExtResource( 8 )
script = ExtResource( 5 )
noKey = true

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 184.0
margin_top = 4.0
margin_right = 250.0
margin_bottom = 24.0

[node name="MenuName" parent="CenterContainer" instance=ExtResource( 1 )]
margin_left = 7.0
margin_top = 4.0
margin_right = 58.0
margin_bottom = 16.0
custom_styles/normal = SubResource( 1 )
text = "Menu Name"
align = 1

[node name="CharacterPortraits" type="HBoxContainer" parent="."]
margin_left = 6.0
margin_right = 182.0
margin_bottom = 27.0
custom_constants/separation = 1

[node name="IndicatorL" parent="CharacterPortraits" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 0.0
margin_bottom = 27.0
key = "ui_focus_prev"

[node name="Ninten" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 1.0
margin_right = 22.0

[node name="Ana" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 23.0
margin_right = 44.0

[node name="Lloyd" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 45.0
margin_right = 66.0

[node name="Teddy" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 67.0
margin_right = 88.0

[node name="Pippi" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 89.0
margin_right = 110.0

[node name="FlyingMan" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 111.0
margin_right = 132.0

[node name="Eve" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 133.0
margin_right = 154.0

[node name="CanaryChick" parent="CharacterPortraits" instance=ExtResource( 11 )]
show_behind_parent = true
margin_left = 155.0
margin_right = 176.0

[node name="Key" type="TextureRect" parent="CharacterPortraits"]
visible = false
show_behind_parent = true
material = ExtResource( 3 )
margin_left = 154.0
margin_right = 175.0
margin_bottom = 27.0
rect_min_size = Vector2( 21, 21 )
texture = ExtResource( 4 )
stretch_mode = 4

[node name="IndicatorR" parent="CharacterPortraits" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 177.0
margin_right = 177.0
margin_bottom = 27.0
